<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="fill">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">

        <LinearLayout
            android:id="@+id/todayEventsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor"
            android:orientation="vertical"
            tools:context=".TodayEventsFragment">

            <LinearLayout
                android:id="@+id/nextConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/nextButton"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:background="@color/backgroundColor"
                        android:src="@drawable/ic_baseline_arrow_drop_down_24"
                        android:tint="@color/tabUnselectedColor" />

                    <TextView
                        android:id="@+id/nextTextId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="0dp"
                        android:fontFamily="@font/roboto_bold"
                        android:includeFontPadding="false"
                        android:padding="10sp"
                        android:text="@string/NextText"
                        android:textColor="@color/tabUnselectedColor"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/nextRelativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/nextRecycleView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:nestedScrollingEnabled="false">
                    </androidx.recyclerview.widget.RecyclerView>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/upcomingConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/upcomingButton"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:background="@color/backgroundColor"
                        android:src="@drawable/ic_baseline_arrow_drop_down_24"
                        android:tint="@color/tabUnselectedColor"/>

                    <TextView
                        android:id="@+id/upcomingTextId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:includeFontPadding="false"
                        android:padding="10sp"
                        android:text="@string/UpcomingText"
                        android:textAlignment="viewStart"
                        android:textColor="@color/tabUnselectedColor"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/upcomingRelativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/upcomingRecycleView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/overConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/overButton"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:background="@color/backgroundColor"
                        android:src="@drawable/ic_baseline_arrow_drop_down_24"
                        android:tint="@color/tabUnselectedColor" />

                    <TextView
                        android:id="@+id/overTextId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="50dp"
                        android:fontFamily="@font/roboto_bold"
                        android:includeFontPadding="false"
                        android:padding="10sp"
                        android:text="@string/OverText"
                        android:textAlignment="viewStart"
                        android:textColor="@color/tabUnselectedColor"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/overRelativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/overRecycleView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/notificationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_notification_on_32"
        app:backgroundTint="@color/notificationOn"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="30dp"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"/>
</FrameLayout>



